--- a/manifest.json
+++ b/manifest.json
@@ -4,19 +4,20 @@
   "description": "Live Beats WebRadio Player",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
+  "background_color": "#000000",
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "icons/lb no background 192.png",
+      "src": "/icons/lb no background 192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any"
     },
     {
-      "src": "icons/lb no background 512.png",
+      "src": "/icons/lb no background 512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "maskable any" 
     }
   ]
 }
