--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,32 @@
 {
   "name": "Live Beats WebRadio",
-  "short_name": "LBWA",
-  "description": "Live Beats WebRadio Player",
-  "start_url": "/",
+  "short_name": "Live Beats",  // Max 12 characters recommended
+  "description": "WebRadio Player",
+  "start_url": "/?source=pwa",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
+  "orientation": "any",
   "icons": [
     {
-      "src": "/icons/lb no background 192.png",
+      "src": "/icons/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any"
+      "purpose": "any maskable"
     },
     {
-      "src": "/icons/lb no background 512.png",
+      "src": "/icons/icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "maskable any" 
+      "purpose": "any maskable"
+    }
+  ],
+  "screenshots": [
+    {
+      "src": "/screenshots/1.png",
+      "sizes": "1280x720",
+      "type": "image/png",
+      "form_factor": "wide"
     }
   ]
 }
