--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,13 @@
-"icons": [
+{
+  "name": "Live Beats WebRadio",
+  "short_name": "Live Beats",  // Max 12 characters recommended
+  "description": "WebRadio Player",
+  "start_url": "/?source=pwa",
+  "display": "standalone",
+  "background_color": "#000000",
+  "theme_color": "#000000",
+  "orientation": "any",
+ "icons": [
   {
     "src": "/icons/icon-72.png",
     "sizes": "72x72",
