--- a/manifest.json
+++ b/manifest.json
@@ -9,9 +9,9 @@
   "orientation": "any",
  "icons": [
   {
-    "src": "/icons/icon-72.png",
-    "sizes": "72x72",
-    "type": "image/png"
+"src": "./icons/icon-72.png",
+      "sizes": "72x72",
+      "type": "image/png"
   },
   {
     "src": "/icons/icon-96.png",
@@ -29,10 +29,10 @@
     "type": "image/png"
   },
   {
-    "src": "/icons/icon-192.png",
-    "sizes": "192x192",
-    "type": "image/png",
-    "purpose": "any maskable"
+   "src": "./icons/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
   },
   {
     "src": "/icons/icon-384.png",
