--- a/manifest.json
+++ b/manifest.json
@@ -1,48 +1,25 @@
 {
   "name": "Live Beats WebRadio",
-  "short_name": "Live Beats",  
-  "description": "WebRadio Player",
-  "start_url": "/?source=pwa",
+  "short_name": "Live Beats",
+  "description": "WebRadio Player for Live Beats",
+  "start_url": "./",
+  "scope": "./",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
   "orientation": "any",
- "icons": [
-  {
-"src": "./icons/icon-72.png",
-      "sizes": "72x72",
-      "type": "image/png"
-  },
-  {
-    "src": "/icons/icon-96.png",
-    "sizes": "96x96",
-    "type": "image/png"
-  },
-  {
-    "src": "/icons/icon-128.png",
-    "sizes": "128x128",
-    "type": "image/png"
-  },
-  {
-    "src": "/icons/icon-144.png",
-    "sizes": "144x144",
-    "type": "image/png"
-  },
-  {
-   "src": "./icons/icon-192.png",
+  "icons": [
+    {
+      "src": "icons/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
-  },
-  {
-    "src": "/icons/icon-384.png",
-    "sizes": "384x384",
-    "type": "image/png"
-  },
-  {
-    "src": "/icons/icon-512.png",
-    "sizes": "512x512",
-    "type": "image/png",
-    "purpose": "any maskable"
-  }
-]
+    },
+    {
+      "src": "icons/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
+    }
+  ]
+}
